--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ bytes = "1.1.0"
 serde_json = "1.0.69"
 futures-util = "0.3.17"
 thiserror = "1.0.30"
+url = "2.2.2"
+
+[dependencies.chrono]
+version = "0.4.19"
+features = ["serde"]
 
 [dependencies.tokio]
 version = "1.13.0"
