--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 [dependencies]
 async-stream = "0.3.2"
 bytes = "1.1.0"
-serde_json = "1.0.69"
 futures-util = "0.3.17"
+serde_json = "1.0.69"
+serde_v8 = "0.19.0"
 thiserror = "1.0.30"
 url = "2.2.2"
+v8 = "0.34.0"
 
 [dependencies.chrono]
 version = "0.4.19"
