Actually send webhooks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,11 @@ futures-util = "0.3.17"
 serde_json = "1.0.69"
 serde_v8 = "0.19.0"
 thiserror = "1.0.30"
-url = "2.2.2"
 v8 = "0.34.0"
 
 [dependencies.chrono]
 version = "0.4.19"
 features = ["serde"]
-
-[dependencies.tokio]
-version = "1.13.0"
-default-features = false
-features = ["rt-multi-thread", "signal", "io-util", "time", "macros", "parking_lot"]
 
 [dependencies.reqwest]
 version = "0.11.6"
@@ -31,3 +25,12 @@ features = ["rustls-tls", "gzip", "brotli", "stream"]
 [dependencies.serde]
 version = "1.0.130"
 features = ["derive"]
+
+[dependencies.tokio]
+version = "1.13.0"
+default-features = false
+features = ["rt-multi-thread", "signal", "io-util", "time", "macros", "parking_lot"]
+
+[dependencies.url]
+version = "2.2.2"
+features = ["serde"]
