--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ features = ["derive"]
 [dependencies.tokio]
 version = "1.13.0"
 default-features = false
-features = ["rt-multi-thread", "signal", "io-util", "time", "macros", "parking_lot"]
+features = ["rt-multi-thread", "fs", "signal", "io-util", "time", "macros", "parking_lot"]
 
 [dependencies.url]
 version = "2.2.2"
