--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,11 @@ version = "0.11.6"
 default-features = false
 features = ["rustls-tls", "gzip", "brotli", "stream"]
 
+[dependencies.sentry]
+version = "0.23.0"
+default-features = false
+features = ["backtrace", "contexts", "panic", "transport", "reqwest", "rustls"]
+
 [dependencies.serde]
 version = "1.0.130"
 features = ["derive"]
