--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 async-stream = "0.3.2"
 bytes = "1.1.0"
+env_logger = "0.9.0"
 futures-util = "0.3.17"
+log = "0.4.14"
 serde_json = "1.0.69"
 serde_v8 = "0.19.0"
 thiserror = "1.0.30"
