--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4.14"
 serde_json = "1.0.69"
 serde_v8 = "0.19.0"
 thiserror = "1.0.30"
+toml = "0.5.8"
 v8 = "0.34.0"
 
 [dependencies.chrono]
