--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,11 @@ v8 = "0.34.0"
 version = "0.4.19"
 features = ["serde"]
 
+[dependencies.clap]
+version = "3.0.6"
+default-features = false
+features = ["std", "color", "derive", "env"]
+
 [dependencies.reqwest]
 version = "0.11.6"
 default-features = false
@@ -33,6 +38,10 @@ features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]
 
 [dependencies.serde]
 version = "1.0.130"
+features = ["derive"]
+
+[dependencies.strum]
+version = "0.23.0"
 features = ["derive"]
 
 [dependencies.tokio]
