--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,57 +1,65 @@
-[package]
-name = "tweet-broadcast"
-version = "0.2.1"
-authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
-license = "MIT"
-edition = "2021"
-
-[dependencies]
-async-stream = "0.3.2"
-bytes = "1.1.0"
-env_logger = "0.9.0"
-futures-util = "0.3.17"
-log = "0.4.14"
-serde_json = "1.0.69"
-serde_v8 = "0.19.0"
-thiserror = "1.0.30"
-toml = "0.5.8"
-v8 = "0.34.0"
-
-[dependencies.chrono]
-version = "0.4.19"
-features = ["serde"]
-
-[dependencies.clap]
-version = "3.0.6"
-default-features = false
-features = ["std", "color", "derive", "env"]
-
-[dependencies.reqwest]
-version = "0.11.6"
-default-features = false
-features = ["rustls-tls", "gzip", "brotli", "stream"]
-
-[dependencies.sentry]
-version = "0.23.0"
-default-features = false
-features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]
-
-[dependencies.serde]
-version = "1.0.130"
-features = ["derive"]
-
-[dependencies.strum]
-version = "0.23.0"
-features = ["derive"]
-
-[dependencies.tokio]
-version = "1.13.0"
-default-features = false
-features = ["rt-multi-thread", "fs", "signal", "io-util", "time", "macros", "parking_lot"]
-
-[dependencies.url]
-version = "2.2.2"
-features = ["serde"]
+[workspace]
+members = [
+  "crates/tweet-model",
+  "crates/tweet-route",
+  "crates/tweet-fetch",
+  "crates/tweet-broadcast",
+  "crates/tweet-discord",
+]
+# [package]
+# name = "tweet-broadcast"
+# version = "0.2.1"
+# authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
+# license = "MIT"
+# edition = "2021"
+#
+# [dependencies]
+# async-stream = "0.3.2"
+# bytes = "1.1.0"
+# env_logger = "0.9.0"
+# futures-util = "0.3.17"
+# log = "0.4.14"
+# serde_json = "1.0.69"
+# serde_v8 = "0.19.0"
+# thiserror = "1.0.30"
+# toml = "0.5.8"
+# v8 = "0.34.0"
+#
+# [dependencies.chrono]
+# version = "0.4.19"
+# features = ["serde"]
+#
+# [dependencies.clap]
+# version = "3.0.6"
+# default-features = false
+# features = ["std", "color", "derive", "env"]
+#
+# [dependencies.reqwest]
+# version = "0.11.6"
+# default-features = false
+# features = ["rustls-tls", "gzip", "brotli", "stream"]
+#
+# [dependencies.sentry]
+# version = "0.23.0"
+# default-features = false
+# features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]
+#
+# [dependencies.serde]
+# version = "1.0.130"
+# features = ["derive"]
+#
+# [dependencies.strum]
+# version = "0.23.0"
+# features = ["derive"]
+#
+# [dependencies.tokio]
+# version = "1.13.0"
+# default-features = false
+# features = ["rt-multi-thread", "fs", "signal", "io-util", "time", "macros", "parking_lot"]
+#
+# [dependencies.url]
+# version = "2.2.2"
+# features = ["serde"]
 
 [profile.release]
 debug = 1  # line information only
