--- a/crates/tweet-route/Cargo.toml
+++ b/crates/tweet-route/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.19"
+futures-util = "0.3.17"
 log = "0.4.14"
 serde_json = "1.0.69"
 serde_v8 = "0.19.0"
