--- a/crates/tweet-broadcast/Cargo.toml
+++ b/crates/tweet-broadcast/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "tweet-broadcast"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
 license = "MIT"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.19"
 env_logger = "0.9.0"
 eyre = "0.6.6"
 futures-util = "0.3.17"
