--- a/crates/tweet-broadcast/Cargo.toml
+++ b/crates/tweet-broadcast/Cargo.toml
@@ -6,11 +6,13 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
+base64 = "0.13.0"
 chrono = "0.4.19"
 env_logger = "0.9.0"
 eyre = "0.6.6"
 futures-util = "0.3.17"
 log = "0.4.14"
+ring = "0.16.20"
 serde_json = "1.0.69"
 thiserror = "1.0.30"
 toml = "0.5.8"
